--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ align-content: center;">
     crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"
     integrity="sha256-WqU1JavFxSAMcLP2WIOI+GB2zWmShMI82mTpLDcqFUg=" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/url-shorten-worker@1.0.5/main.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/go-short@latest/main.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
