img-link UPDATE

--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@ vertical-align: center;
 flex-wrap: wrap;
 align-content: center;">
   <a href="https://github.com/imsay3m/">
-    <img style="position: absolute; top: 0; right: 0; border: 0;" src="github.png" alt="Follow me on GitHub">
+    <img style="position: absolute; top: 0; right: 0; border: 0;"
+      src="https://cdn.jsdelivr.net/npm/go-short@latest/github.png" alt="Follow me on GitHub">
   </a>
-  <div class="card" style="width:80%">
+  <div class="card" style="width:70%">
     <h5 class="card-header">Shorten your URL</h5>
     <div class="card-body">
       <h5 class="card-title">Please enter the long URL to be shortened:</h5>
