--- a/safe-browsing.html
+++ b/safe-browsing.html
@@ -84,7 +84,7 @@
                 into the address bar of your browser to open. Thank you.
             </div>
             <div class="card-text">
-                Powered By: <a href="https://github.com/imsay3m/" target="_self">Go Short</a>
+                Powered By: <a href="https://github.com/imsay3m/go-short" target="_self">Go Short</a>
             </div>
             <p id="notice"></p>
         </div>
