--- a/no-ref.html
+++ b/no-ref.html
@@ -9,7 +9,7 @@
 
 <body>
 	<p>Redirecting..<br /><a href="{Replace}">{Replace}</a></p>
-	<a href="https://github.com/imsay3m/go-short/" target="_self">Follow me on GitHub</a>
+	<a href="https://github.com/imsay3m/go-short/" target="_self">Fork me on GitHub</a>
 	<script type="text/javascript">
 		/* <![CDATA[ */
 		setTimeout('window.location.replace( "{Replace}" + window.location.hash );', 1000 )
