--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@ justify-content: center;
 vertical-align: center;
 flex-wrap: wrap;
 align-content: center;">
-  <a href="https://github.com/imsay3m/">
+  <a href="https://github.com/imsay3m/go-short">
     <img style="position: absolute; top: 0; right: 0; border: 0;"
-      src="https://cdn.jsdelivr.net/npm/go-short@latest/github.png" alt="Follow me on GitHub">
+      src="https://cdn.jsdelivr.net/npm/go-short@latest/github.png" alt="Fork me on GitHub">
   </a>
   <div class="card" style="width:70%">
     <h5 class="card-header">Shorten your URL</h5>
